[package]
name = "bevy_testing"
version = "0.1.1"
edition = "2021"
authors = ["bnjmn21 <benma2321@gmail.com>"]
description = "Testing library for bevy"
readme = "README.md"
repository = "https://github.com/bnjmn21/bevy_testing"
license = "MIT"
keywords = ["bevy", "test", "game-dev", "testing", "game"]
categories = [
    "development-tools",
    "development-tools::testing",
    "game-development",
]


[dependencies]
bevy = { version = "0.14.1", default-features = false }
colored = "2.1.0"
sealed = "0.5.0"

[build-dependencies]
toml = "0.8.19"
